--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,10 @@ body, html {
   overflow: hidden;
 }
 
+:root {
+  --animate-delay: 0.5s;
+}
+
 .game {
   display: none;
   width: 100vw; 
@@ -18,4 +22,27 @@ body, html {
 
 .game.active {
   display: flex;
+}
+
+
+.gamelogo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  aspect-ratio: 1/1;
+  width: 90%;
+  height: 90%;
+  object-fit: contain;
+  margin: 2vw;
+  overflow: hidden;
+}
+
+.gamelogo img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
