--- a/public/style.css
+++ b/public/style.css
@@ -197,3 +197,39 @@ h3{
     background-color: #3dd53d;
   }
 }
+
+
+
+
+.slider input {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 30px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  border-radius:20px;
+}
+
+.slider input:hover {
+  opacity: 1;
+}
+
+.slider input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 35px;
+  height: 35px;
+  background: #04AA6D;
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+.slider input::-moz-range-thumb {
+  width: 35px;
+  height: 35px;
+  background: #04AA6D;
+  cursor: pointer;
+}
