--- a/public/style.css
+++ b/public/style.css
@@ -462,5 +462,37 @@ h3{
 }
 
 .question-image  img{
-  width: 90%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  display: none;
+}
+
+.display-mode .question-image {
+  width: 100%;
+  height: 100%;
+}
+.display-mode .question-image h1 {
+  display: none;
+}
+.display-mode .question-image img {
+  display: block;
+}
+.display-mode .question-image img.image-answer {
+  display: none;
+}
+.display-mode .question-image.reveal img.image-question {
+  display: none;
+}
+.display-mode .question-image.reveal img.image-answer {
+  display: block;
+}
+
+.display-mode .question-image + .answers {
+  display: none;
+}
+
+.display-mode #game4 page{
+  width: 100%;
+  height: 100%;
 }
